[package]
name = "payment_toy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
rust_decimal = { version = "1.23.1", features = ["serde-with-str"] }
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign", "display"] }


[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

